--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,21 @@ p {
     margin: 0;
 }
 
+canvas {
+    height: 400px;
+    width: 100px;
+    margin-top: 15px;
+}
+
+.btn-default {
+    width: 60px;
+    white-space: normal;
+    padding: 5px;
+    line-height: 1.2;
+    font-size: 10px;
+    font-weight: 700;
+}
+
 #nav-container {
     max-width: 1400px;
 }
@@ -9,4 +24,8 @@ p {
 #body-container {
     padding-top: 60px;
     max-width: 1400px;
+}
+
+#select-country {
+    width: 150px;
 }
