mocked up slider on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
             <canvas id="scatter-chart"></canvas>
             <script>scatterchart();</script>
           </div><!-- /#col-chartdisp -->
+          <div id="col-chartslide" class="col-xs-12">
+            <input id="chart-slider" class="slider" type="range" min="1990" max="2016" value="2016"/>
+          </div><!-- /#col-chartslide -->
         </div><!-- /#row-chartdisp -->
       </div><!-- /#col-scatterchart -->
 
