--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,43 @@ canvas {
 #select-country {
     width: 150px;
 }
+
+/* Chart Slider */
+#col-chartslide {
+    /*width: 100%;*/
+}
+
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 15px; /* Specified height */
+    background: #eee; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: 0s; /* 0.2 seconds transition on hover */
+    transition: opacity 0s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1;
+
+}
+
+/* The slider handle (use webkit (Chrome, Opera, Safari, Edge) and moz (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 10px; /* Set a specific slider handle width */
+    height: 15px; /* Slider handle height */
+    background: #999; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+    width: 10px; /* Set a specific slider handle width */
+    height: 15px; /* Slider handle height */
+    background: #999; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+}
