--- a/static/style.css
+++ b/static/style.css
@@ -8,13 +8,57 @@ canvas {
     margin-top: 15px;
 }
 
-.btn-default {
+.btn-btnselect {
     width: 60px;
     white-space: normal;
     padding: 5px;
     line-height: 1.2;
     font-size: 10px;
     font-weight: 700;
+}
+
+/* Goal Tiles */
+.btn-g-tiles {
+    padding: 3px;
+    margin: 3px;
+    line-height: 1;
+    border-radius: 6px;
+    white-space: normal;
+    width: 65px;
+    height: 65px;
+}
+
+.btn-g-score {
+    font-size: 18px;
+}
+
+.btn-g-title {
+    font-size: 10px;
+    font-weight: 700;
+}
+
+button.g01 {
+    background-color: #eb1c2d;
+}
+
+button.g02 {
+    background-color: #d3a029;
+}
+
+button.g03 {
+    background-color: #27ab48;
+}
+
+button.g04 {
+    background-color: #c31f33;
+}
+
+button.g05 {
+    background-color: #ef402b;
+}
+
+button.g06 {
+    background-color: #00aed9;
 }
 
 #nav-container {
@@ -31,19 +75,15 @@ canvas {
 }
 
 /* Chart Slider */
-#col-chartslide {
-    /*width: 100%;*/
-}
-
 .slider {
     -webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 100%; /* Full-width */
-    height: 15px; /* Specified height */
-    background: #eee; /* Grey background */
-    outline: none; /* Remove outline */
+    width: 100%;
+    height: 15px;
+    background: #eee;
+    outline: none;
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: 0s; /* 0.2 seconds transition on hover */
+    -webkit-transition: 0s; /* no transition time */
     transition: opacity 0s;
 }
 
@@ -57,15 +97,15 @@ canvas {
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none; /* Override default look */
     appearance: none;
-    width: 10px; /* Set a specific slider handle width */
-    height: 15px; /* Slider handle height */
-    background: #999; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 10px; /* Handle width */
+    height: 15px; /* Slider & Handle height */
+    background: #999;
+    cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-    width: 10px; /* Set a specific slider handle width */
-    height: 15px; /* Slider handle height */
-    background: #999; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 10px; /* Handle width */
+    height: 15px; /* Slider & Handle height */
+    background: #999;
+    cursor: pointer;
 }
