--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
             <script>scatterchart();</script>
           </div><!-- /#col-chartdisp -->
         </div><!-- /#row-chartdisp -->
-        <div id="row-slider">
+        <div id="row-slider" class="row">
           <div id="col-slider" class="col-xs-12">
             <input id="slider" class="slider" type="range" min="1990" max="2016" value="2016"/>
           </div><!-- /#col-slider -->
@@ -51,27 +51,27 @@
         <div id="row-tiles" class="row">
           <div id="col-tiles" class="col-xs-12">
             <button id="g01" type="button" class="btn btn-default btn-g-tiles g01">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">8</p>
               <p class="btn-g-title">Poverty</p>
             </button>
             <button id="g02" type="button" class="btn btn-default btn-g-tiles g02">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">9</p>
               <p class="btn-g-title">Hunger</p>
             </button>
             <button id="g03" type="button" class="btn btn-default btn-g-tiles g03">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">5</p>
               <p class="btn-g-title">Health</p>
             </button>
             <button id="g04" type="button" class="btn btn-default btn-g-tiles g04">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">7</p>
               <p class="btn-g-title">Education</p>
             </button>
             <button id="g05" type="button" class="btn btn-default btn-g-tiles g05">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">7</p>
               <p class="btn-g-title">Gender Equality</p>
             </button>
             <button id="g06" type="button" class="btn btn-default btn-g-tiles g06">
-              <p class="btn-g-score">S</p>
+              <p class="btn-g-score">10</p>
               <p class="btn-g-title">Water &amp; Sanitation</p>
             </button>
           </div><!-- /#col-tiles -->
