--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
@@ -11,32 +12,21 @@
   {% block head %}{% endblock %}
   <title>{% block headtitle %}{% endblock %} | AltDash</title>
 </head>
+
 <body>
 
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div id="nav-container" class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-menu" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">AltDash</a>
-      </div> <!-- /.navbar-header -->
+  <div id="body-header">
+    {% include 'bodyheader.html' %}
+  </div><!-- /#body-header -->
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div id="nav-menu" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="/">Home<span class="sr-only"> (current)</span></a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /#nav-container -->
-  </nav>
+  <div id="body-content">
+    {% block bodycontent %}{% endblock %}
+  </div><!-- /#body-content -->
 
-  {% block bodycontent %}{% endblock %}
+  <div id="body-footer">
+    {% include 'bodyfooter.html' %}
+  </div><!-- /#body-footer -->
+
 </body>
+
 </html>
