--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,36 @@
+#nav-container {
+    max-width: 1400px;
+}
+
 p {
     margin: 0;
+}
+
+.body-row {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#body-container {
+    padding-top: 60px;
+    max-width: 1400px;
+}
+
+/***************************/
+/* Chart-Tiles */
+/***************************/
+.btn-btnselect {
+    width: 60px;
+    white-space: normal;
+    padding: 5px;
+    line-height: 1.2;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+#select-country {
+    max-width: 100%;
+    min-width: 50%;
 }
 
 canvas {
@@ -8,13 +39,43 @@ canvas {
     margin-top: 15px;
 }
 
-.btn-btnselect {
-    width: 60px;
-    white-space: normal;
-    padding: 5px;
-    line-height: 1.2;
-    font-size: 10px;
-    font-weight: 700;
+/* Chart Slider */
+#col-slider {
+    margin: 10px 0px 10px;
+}
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%;
+    height: 15px;
+    background: #eee;
+    outline: none;
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: 0s; /* no transition time */
+    transition: opacity 0s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1;
+
+}
+
+/* The slider handle (use webkit (Chrome, Opera, Safari, Edge) and moz (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 10px; /* Handle width */
+    height: 15px; /* Slider & Handle height */
+    background: #999;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 10px; /* Handle width */
+    height: 15px; /* Slider & Handle height */
+    background: #999;
+    cursor: pointer;
 }
 
 /* Goal Tiles */
@@ -67,55 +128,17 @@ button.g06 {
     background-color: #00aed9;
 }
 
-#nav-container {
-    max-width: 1400px;
-}
-
-#body-container {
-    padding-top: 60px;
-    max-width: 1400px;
-}
-
-#select-country {
-    max-width: 100%;
-    min-width: 50%;
-}
-
-/* Chart Slider */
-#col-slider {
-    margin: 10px 0px 10px;
-}
-.slider {
-    -webkit-appearance: none;  /* Override default CSS styles */
-    appearance: none;
+/***************************/
+/* Footer */
+/***************************/
+#footer-container {
+    background-color: #222;
     width: 100%;
-    height: 15px;
-    background: #eee;
-    outline: none;
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: 0s; /* no transition time */
-    transition: opacity 0s;
+    min-height: 60px;
+    color: #eee;
+    padding: 15px 15px;
 }
 
-/* Mouse-over effects */
-.slider:hover {
-    opacity: 1;
-
-}
-
-/* The slider handle (use webkit (Chrome, Opera, Safari, Edge) and moz (Firefox) to override default look) */
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
-    appearance: none;
-    width: 10px; /* Handle width */
-    height: 15px; /* Slider & Handle height */
-    background: #999;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 10px; /* Handle width */
-    height: 15px; /* Slider & Handle height */
-    background: #999;
-    cursor: pointer;
+#footer-container a, a:active, a:hover, a:visited {
+    color: #18e;
 }
