--- a/templates/worldbank.html
+++ b/templates/worldbank.html
@@ -1,5 +1,18 @@
 <!-- all about the world bank, development goals, and indicators -->
 
 <div id="col-worldbank" class="col-xs-12">
-  <p>All about The World Bank</p>
+  <p>The World Bank Group is a unique global partnership: five institutions 
+     working for sustainable solutions that reduce poverty and build shared 
+     prosperity in developing countries. 
+  <p>It consists of 189 member countries, staff from more than 170 countries, 
+     and offices in more than 130 locations. It works in every major area of 
+     development, providing an array of financial products and technical 
+     assistance, and helping countries share and apply innovative knowledge and 
+     solutions to the challenges they face.</p>
+  <p>One of the ways The World Bank achieves its goals is through data 
+     collection and analysis. The data is freely available online as part of an
+     Open Data initiative. All data on AltDash was downloaded from the <a 
+     href="https://data.worldbank.org/data-catalog" target="_blank" title="World 
+     Bank Data Catalog">Data Catalog</a> and not modified other than to 
+     facilitate the AltDash database functionality.
 </div><!-- /#col-worldbank -->
