--- a/templates/bodyfooter.html
+++ b/templates/bodyfooter.html
@@ -1,7 +1,18 @@
 <div id="footer-container" class="container-fluid">
   <div id="row-footer" class="row footer-row">
       <div id="col-footer" class="col-xs-12">
-        <p>&copy; 2017 <a href="http://meggangreen.com">Meggan M Green</a></p>
+        <p>
+          &copy; 2017 <a href="http://meggangreen.com" target="_blank" 
+          title="Meggan M Green">Meggan M Green</a>
+        </p>
+        <p>
+          <a href="/" title="AltDash">AltDash</a> is not affiliated in any way 
+          with <a href="https://data.worldbank.org/" target="_blank" 
+          title="World Bank Data Catalog">The World Bank</a>. All data used in 
+          accordance with the <a href="https://data.worldbank.org/summary-terms-of-use" 
+          target="_blank" title="Open Data Terms of Use">Open Data Terms of 
+          Use</a>.
+        </p>
       </div><!-- /#col-footer -->
     </div><!-- /#row-footer -->
 </div><!-- /#footer-container -->
