--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,15 @@
-#nav-container {
-    max-width: 1400px;
-}
-
 p {
     margin: 0;
     font-size: 12px;
+}
+
+.plain {
+    margin-top: -10px;
+    padding: 0;
+}
+
+#nav-container {
+    max-width: 1400px;
 }
 
 .body-row {
@@ -12,8 +17,23 @@ p {
     margin-bottom: 5px;
 }
 
-#body-container {
+#body-content {
     padding-top: 60px;
+}
+
+.body-0 {
+    width: 100%;
+    background-color: #fff;
+}
+
+.body-1 {
+    width: 100%;
+    border-top: 3px solid #222;
+    border-bottom: 3px solid #222;
+    background-color: #ccc;
+}
+
+.container-body {
     max-width: 1400px;
 }
 
@@ -42,7 +62,7 @@ canvas {
 
 /* Chart Slider */
 #col-slider {
-    margin: 10px 0px 10px;
+    margin: 10px 0px;
 }
 .slider {
     -webkit-appearance: none;  /* Override default CSS styles */
@@ -132,6 +152,11 @@ button.g06 {
 /***************************/
 /* World Bank Section */
 /***************************/
+#col-worldbank {
+    margin-top: 10px;
+    padding: 15px;
+}
+
 #col-worldbank p {
     font-size: 13px;
     line-height: 1.2;
@@ -141,14 +166,18 @@ button.g06 {
 /***************************/
 /* Footer */
 /***************************/
-#footer-container {
+#body-footer {
     background-color: #222;
     width: 100%;
     min-height: 60px;
-    color: #eee;
-    padding: 15px 15px;
 }
 
-#footer-container a, a:active, a:hover, a:visited {
+#footer-container {
+    color: #eee;
+    padding: 15px 15px;
+    max-width: 1400px;
+}
+
+#col-footer a, a:active, a:hover, a:visited {
     color: #18e;
 }
