--- a/templates/bodyfooter.html
+++ b/templates/bodyfooter.html
@@ -6,12 +6,21 @@
           title="Meggan M Green">Meggan M Green</a>
         </p>
         <p>
-          <a href="/" title="AltDash">AltDash</a> is not affiliated in any way 
-          with <a href="https://data.worldbank.org/" target="_blank" 
-          title="World Bank Data Catalog">The World Bank</a>. All data used in 
-          accordance with the <a href="https://data.worldbank.org/summary-terms-of-use" 
-          target="_blank" title="Open Data Terms of Use">Open Data Terms of 
-          Use</a>.
+          <a href="/" title="AltDash">AltDash</a>
+          is not affiliated in any way with 
+          <a href="https://worldbank.org/" target="_blank" title="The World Bank">
+            The World Bank
+          </a>
+          or 
+          <a href="http://www.un.org/" target="_blank" title="United Nations">
+            The United Nations
+          </a>
+        </p>
+        <p>
+          All data used in accordance with the
+          <a href="https://data.worldbank.org/summary-terms-of-use" target="_blank" title="Open Data Terms of Use">
+            Open Data Terms of Use
+          </a>
         </p>
       </div><!-- /#col-footer -->
     </div><!-- /#row-footer -->
