--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
 
   <div class="body-1">
     <!-- show information about the world bank -->
-    {% include 'worldbank.html' ignore missing %}
+    {% include 'aboutme.html' ignore missing %}
   </div><!-- /.body-1 -->
 
-  <div class="body-0">
+  <div class="body-2">
     <!-- show information about the world bank -->
-    {% include 'aboutme.html' ignore missing %}
-  </div><!-- /.body-0 -->
+    {% include 'sdgunwb.html' ignore missing %}
+  </div><!-- /.body-2 -->
 
 {% endblock %}
