some stupid cleaning of goals.csv but it is seeded

--- a/static/style.css
+++ b/static/style.css
@@ -146,7 +146,7 @@ canvas {
     color:  #fff;
 }
 
-/* populate colors/imgs with jQuery */
+/* populate colors/imgs with js */
 /*https://stackoverflow.com/questions/1341358/set-size-on-background-image-with-css*/
 
 button.g01 {
