@wip seeding indicators

--- a/templates/bodyfooter.html
+++ b/templates/bodyfooter.html
@@ -7,7 +7,7 @@
         </p>
         <p>
           <a href="/" title="AltDash">AltDash</a>
-          is not affiliated in any way with 
+          is neither endorsed nor affiliated in any way with 
           <a href="https://worldbank.org/" target="_blank" title="The World Bank">
             The World Bank
           </a>
@@ -19,7 +19,7 @@
         <p>
           All data used in accordance with the
           <a href="https://data.worldbank.org/summary-terms-of-use" target="_blank" title="Open Data Terms of Use">
-            Open Data Terms of Use
+            World Bank Open Data Terms of Use
           </a>
         </p>
       </div><!-- /#col-footer -->
