--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,22 @@
   <div id="root"></div>
 
 <!-- react -->
-<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<!-- <script src="https://unpkg.com/react@16/umd/react.development.js"></script> -->
+<!-- <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
 
 <!-- react-router, for making our single-page-app -->
-<script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
+<!-- <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.js"></script> -->
 
 <!-- not all browsers support the new AJAX fetch API, so load a polyfill -->
 <script src="http://unpkg.com/whatwg-fetch"></script>
 
 <!-- to convert our jsx -->
-<script src="http://unpkg.com/babel-standalone"></script>
+<!-- <script src="http://unpkg.com/babel-standalone@6/babel.js"></script> -->
+<script src="static/js/bundle.js"></script>
 
 <!-- our overall site application JS -->
-<script src="static/js/components.jsx" type="text/jsx"></script>
-<script src="static/js/index.jsx" type="text/jsx"></script>
+// <!-- <script src="static/js/components.jsx" type="text/jsx"></script> -->
+<!-- <script src="static/js/index.jsx" type="text/jsx"></script> -->
 
 </body>
 </html>
