--- a/static/style.css
+++ b/static/style.css
@@ -126,7 +126,7 @@ canvas {
 }
 
 /* Goal Tiles */
-.btn-g-tiles {
+.tile {
     padding: 3px;
     margin: 3px;
     border-radius: 6px;
@@ -138,7 +138,7 @@ canvas {
     background-position: 40% 10%;
 }
 
-.btn-g-score {
+.tile-score {
     font-size: 35px;
     font-weight: 700;
     line-height: 1;
