--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -2,7 +2,7 @@
 
 <div id="cont-body-charts" class="container-fluid container-body">
   <div id="row-body-charts" class="row body-row">
-    <div id="col-scatterchart" class="col-xs-12">
+    <div id="col-scatterchart" class="col-xs-12 col-md-8">
       <div id="row-btnselect" class="row">
         <div id="col-mapbtn" class="col-xs-3">
           <button id="btn-map" class="btn btn-default btn-btnselect" type="button">
@@ -39,7 +39,7 @@
         </div><!-- /#col-slider -->
       </div><!-- /#row-slider -->
     </div><!-- /#col-scatterchart -->
-    <div id="col-tiles" class="col-xs-12">
+    <div id="col-tiles" class="col-xs-12 col-md-4">
       {% for goal in goals %}
         <button id="g{{ goal.goal_pre }}" type="button"
                 class="btn btn-default tile g{{ goal.goal_pre }}"
@@ -61,5 +61,5 @@
   $('#select-country').on('change', selectCountry);
   $('#btn-random').on('click', selectCountry);
   $('#slider').on('change', updateChartTiles);
-  $('.tile').hover( tileGraphic, tileBlank);
+  //$('.tile').hover( tileGraphic, tileBlank);
 </script>
