changed some chart scatter styling

--- a/static/style.css
+++ b/static/style.css
@@ -67,7 +67,7 @@ p {
 /* Chart-Tiles */
 /***************************/
 .btn-btnselect {
-    width: 60px;
+    /*width: 60px;*/
     white-space: normal;
     padding: 5px;
     line-height: 1.2;
