--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -5,7 +5,7 @@
     <div id="col-scatterchart" class="col-xs-12 col-md-8">
       <div id="row-btnselect" class="row">
         <div id="col-mapbtn" class="col-xs-3">
-          <button id="btn-map" class="btn btn-default btn-btnselect" type="button">
+          <button id="btn-map" class="btn btn-default form-control btn-btnselect" type="button">
             World Map
           </button>
         </div><!-- /#col-mapbtn -->
@@ -22,7 +22,7 @@
           </form>
         </div><!-- /#col-chartselect -->
         <div id="col-randombtn" class="col-xs-3">
-          <button id="btn-random" class="btn btn-default btn-btnselect" type="button">
+          <button id="btn-random" class="btn btn-default form-control btn-btnselect" type="button">
             New Random
           </button>
         </div><!-- /#col-randombtn -->
@@ -34,11 +34,12 @@
       </div><!-- /#row-chartdisp -->
       <div id="row-slider" class="row">
         <div id="col-slider" class="col-xs-12">
-          <input id="slider" class="slider" 
-           type="range" min="1960" max="2016" value="" />
+          <input id="slider" class="slider" type="range"
+                 min="1960" max="2016" value="" />
         </div><!-- /#col-slider -->
       </div><!-- /#row-slider -->
     </div><!-- /#col-scatterchart -->
+    <div id="col-tiles-push" class="hidden-xs col-md-4" style="height: 47px;"></div>
     <div id="col-tiles" class="col-xs-12 col-md-4">
       {% for goal in goals %}
         <button id="g{{ goal.goal_pre }}" type="button"
