slider: changed html

--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -34,8 +34,8 @@
       </div><!-- /#row-chartdisp -->
       <div id="row-slider" class="row">
         <div id="col-slider" class="col-xs-12">
-          <input id="slider" class="slider" type="range"
-                 min="1960" max="2016" value="" />
+          <div id="slider"></div>
+          <!-- <input id="slider" class="slider" type="range" min="1960" max="2016" value="" /> -->
         </div><!-- /#col-slider -->
       </div><!-- /#row-slider -->
     </div><!-- /#col-scatterchart -->
