--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -34,7 +34,7 @@
       </div><!-- /#row-chartdisp -->
       <div id="row-slider" class="row">
         <div id="col-slider" class="col-xs-12">
-          <div id="slider"></div>
+          <div id="slider" data-min="{{ slider_min }}" data-max="{{ slider_max }}"></div>
           <!-- <input id="slider" class="slider" type="range" min="1960" max="2016" value="" /> -->
         </div><!-- /#col-slider -->
       </div><!-- /#row-slider -->
