--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,16 @@
   <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
+  
+  <script src="static/jqui/jquery-ui.min.js"></script>
+
   <script src="static/js/cjs-charts.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-  <link rel="stylesheet" href="static/style.css" />
+  
+  <link rel="stylesheet" type="text/css" href="static/jqui/jquery-ui.min.css">
+  <link rel="stylesheet" type="text/css" href="static/jqui/jquery-ui.structure.min.css">
+
+  <link rel="stylesheet" type="text/css" href="static/style.css" />
   {% block head %}{% endblock %}
   <title>{% block headtitle %}{% endblock %} | AltDash</title>
 </head>
