@wip style, slider, working on tiles page

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,12 @@
 
   <!-- AltDash JS and CSS -->
   <link rel="stylesheet" type="text/css" href="static/style.css" />
-  <script src="static/js/cjs-charts.js"></script>
+  <script src="static/js/body-0.js"></script>
   
   
   {% block head %}{% endblock %}
   
-  <title>{% block headtitle %}{% endblock %} | AltDash</title>
+  <title>AltDash | World Bank Data on Sustainable Development Goals</title>
 </head>
 
 <body>
