--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,15 @@
+.extra-hidden {
+    visibility: hidden;
+}
+
 p {
     margin: 0 0 10px;
-    font-size: 12px;
-    line-height: 1.2
+    font-size: 13px;
+    line-height: 1.3
+}
+
+.h4, h4 {
+    margin-top: 2px;
 }
 
 .plain {
@@ -9,13 +17,43 @@ p {
 }
 
 .navbar-default {
-    background-color: #ccc;
+    background-color: #02558b;
     border-color: #444;
     border-width: 0 0 2px;
 }
 
+.navbar-default .navbar-brand:focus, 
+.navbar-default .navbar-brand:hover {
+    color: #eee;
+}
+
+.navbar-toggle,
+.navbar-default .navbar-toggle:hover, 
+.navbar-default .navbar-toggle:focus {
+    background-color: #1c6fa5;
+}
+
+.navbar-default .navbar-nav > .active > a, 
+.navbar-default .navbar-nav > .active > a:focus, 
+.navbar-default .navbar-nav > .active > a:hover {
+    color: #fff;
+    background-color: #1c6fa5;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #eee;
+}
+
+.navbar-default .navbar-nav > li > a:focus, 
+.navbar-default .navbar-nav > li > a:hover {
+    color: #fff;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #ddd;
+}
+
 .navbar-default .navbar-brand {
-    color: #222;
+    color: #fff;
 }
 
 #nav-container {
@@ -23,11 +61,7 @@ p {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #444;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #222;
+    border-color: #ddd;
 }
 
 .body-row {
@@ -46,7 +80,7 @@ p {
 
 .body-0 {
     background-color: #fff;
-    border-top: 10px solid #0bc9f8;
+    border-top: 10px solid #3dac47;
 }
 
 .body-1 {
@@ -56,7 +90,7 @@ p {
 
 .body-2 {
     background-color: #eee;
-    border-top: 8px solid #4ca146;
+    border-top: 8px solid #fdb713;
 }
 
 .container-body {
@@ -188,7 +222,7 @@ canvas {
 }
 
 /* Goal Tiles */
-.tile {
+.tile-sm {
     padding: 3px;
     margin: 3px;
     border-radius: 6px;
@@ -198,6 +232,29 @@ canvas {
     border-width: 0;
     background-size: 120%;
     background-position: 35% 12%;
+}
+
+.tile-row {
+    /*max-width: 94%;
+    margin-right: auto;
+    margin-left: auto;*/
+    padding: 0 5px;
+}
+
+.tile-indiv {
+    padding: 0;
+}
+
+.tile-md {
+    padding: 5px;
+    margin: 5px 5px 5px 5px;
+    border-radius: 6px;
+    white-space: normal;
+    width: 110px;
+    height: 110px;
+    border-width: 0;
+    background-size: 100%;
+    background-position: center;
 }
 
 .tile:focus, .tile:hover {
@@ -232,10 +289,10 @@ canvas {
 /* Footer */
 /***************************/
 #body-footer {
-    background-color: #444;
+    background-color: #02558b;
     width: 100%;
     min-height: 60px;
-    border-top: 8px solid #f89d2a;
+    border-top: 8px solid #3dac47;
 }
 
 #footer-container {
