--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -1,7 +1,7 @@
 <!-- needs to go in a full-width div -->
 
-<div id="cont-body-charts" class="container-fluid container-body">
-  <div id="row-body-charts" class="row body-row">
+<div id="cont-body-charttiles" class="container-fluid container-body">
+  <div id="row-body-charttiles" class="row body-row">
     <div id="col-scatterchart" class="col-xs-12 col-md-8">
       <div id="row-btnselect" class="row">
         <div id="col-mapbtn" class="col-xs-3">
@@ -12,7 +12,7 @@
         <div id="col-chartselect" class="col-xs-6">
           <form id="country-selector"> 
             <select id="select-country" name="country" class="form-control"
-                    data-country="{{ selected }}">
+                    data-country="{{ selected.country_id }}">
               {% for country in countries %}
                 <option value="{{ country.country_id }}" class="opt-country">
                   {{ country.name }}
@@ -38,16 +38,45 @@
         </div><!-- /#col-slider -->
       </div><!-- /#row-slider -->
     </div><!-- /#col-scatterchart -->
-    <div id="col-tiles-push" class="hidden-xs col-md-4" style="height: 47px;"></div>
+    <div id="col-countryinfo1" class="col-xs-12 col-md-4 countryinfo">
+      <!-- Populated with JS -->
+    </div><!-- /#col-countryinfo1 -->
     <div id="col-tiles" class="col-xs-12 col-md-4">
       {% for goal in goals %}
-        <button id="g{{ goal.goal_pre }}" type="button"
-                class="btn btn-default tile g{{ goal.goal_pre }}"
+        <button id="g{{ goal.goal_pre }}sm" type="button"
+                class="btn btn-default tile tile-sm g{{ goal.goal_pre }}"
                 style="background-image: url('static/{{ goal.iurl_blank }}');
                        background-color: {{ goal.hexval }};">
-          <p class="tile-score"></p>
         </button>
       {% endfor %}
     </div><!-- /#col-tiles -->
-  </div><!-- /#row-body-charts -->
-</div><!-- /#cont-body-charts -->
+  </div><!-- /#row-body-charttiles -->
+
+  <div id="row-body-tiledetails" class="row body-row">
+    <div id="col-tiledetails" class="col-xs-12">
+      <div id="row-countryback" class="row">
+        <div id="col-countryinfo2" class="col-xs-8 col-md-10 countryinfo">
+          <!-- Populated with JS -->
+        </div><!-- /#col-countryinfo2 -->
+        <div id="col-backbtn" class="col-xs-4 col-md-2">
+          <button id="btn-back" class="btn btn-default form-control btn-btnselect" type="button">
+            Back to Chart
+          </button>
+        </div><!-- /#col-backbtn -->
+      </div><!-- /#row-countryback -->
+      <div id="row-tiledetails" class="row">
+        {% for goal in goals %}
+          <div class="col-xs-12 col-md-4 tile-row">
+            <div id="col-tile-g{{ goal.goal_pre }}" class="col-xs-4 tile-indiv">
+              <button id="g{{ goal.goal_pre }}md" type="button"
+                      class="btn btn-default tile tile-md g{{ goal.goal_pre }}"
+                      style="background-image: url('static/{{ goal.iurl_full }}');
+                             background-color: {{ goal.hexval }};">
+              </button>
+            </div><!-- /#col-tile-g{{ goal.goal_pre }} -->
+          </div><!-- /#col-tileindiv -->
+        {% endfor %}
+      </div><!-- /#row-tiledetails -->
+    </div><!-- /#col-tiledetails -->
+  </div><!-- /#row-body-tiledetails -->
+</div><!-- /#cont-body-charttiles -->
